# TheConversationSentimentAnalysis

./: Dockerfile  README.md  app.py  environment.yml  pyproject.toml  requirements.txt  requirements_cpu.txt  requirements_light.txt  tox.ini
analysis/: basic_sentiment.py
app/: app.py  main.py  test.py
app/scripts/: __init__.py  summarize.py
app/static/css/: main.css
app/templates/: 404.html  about.html  article.html  base.html  index.html
scripts/: __init__.py  basic_sentiment.py  basic_sentiment_transformers.py  summarize.py  test.py
templates/: 500.html  article.html  base.html  index.html
tests/: test.py  test_main.py
webapp/: app.py
webapp/templates/: index.html
