[tool.poetry]
name = "TheConversationSentimentAnalysis"
version = "0.1"
description = "A sample project detailing how to get articles and summarize them using Quart and websockets"
authors = ["asutermo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "MIT"
repository = "https://github.com/asutermo/TheConversationSentimentAnalysis/"

[tool.poetry.dev-dependencies]
hypothesis = "*"
pytest = "*"
pytest-asyncio = "*"
torch = ">=2.0.1"
tox = "*"

[tool.poetry.extras]
dotenv = ["python-dotenv"]
pydantic = ["pydantic"]

[tool.poetry.dependencies]
python = ">=3.9"
pydantic = { version = ">=2", optional = true }
quart = ">=0.19.0"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "app, tests"
line_length = 100
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
order_by_type = false
reverse_relative = true

[tool.mypy]
allow_redefinition = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = true
implicit_reexport = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = false
warn_redundant_casts = true
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--showlocals --strict-markers"
asyncio_mode = "auto"
pythonpath = "."
testpaths = ["tests"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"